Concluindo primeira Section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body class="main-bg">
     <aside class="menu white-bg">
-        <section class="menu-content">
+        <div class="menu-content">
         <h1>
             <a href="#">LOGO</a>
         </h1>
@@ -31,10 +31,25 @@
                 <li><a href="#">contact</a></li>
             </ul>
         </nav>
-        </section>
+    </div>
     </aside>
 
-    <section class="section"></section>
-    <section class="section white-bg"></section>
+     <div class = "menu-space"></div>
+
+    <section class="main-bg section intro">
+        <div class="main-content intro-content">
+        <div class="intro-text-content">
+        <h2>Learn to Code</h2>
+        <p>If you want to create your own website, check out W3Schools Spaces.
+        It is free to use, and does not require any setup Code snippets for HTML, CSS and JavaScript</p>
+        </div>
+        <div class="intro-img">
+            <img src="assets/img/html.svg" alt="HTML/CSS/JS">
+        </div>
+        </div>
+    </section>
+
+    
+    <section class="white-bg section"></section>
 </body>
 </html>
