--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/elements.css">
-    <link rel="stylesheet" href="assets/css/classes.css">
-    <link rel="stylesheet" href="assets/css/menu.css">
-    <link rel="stylesheet" href="assets/css/variables.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
@@ -35,6 +31,7 @@
                     <li><a href="#grid-one">grid-one</a></li>
                     <li><a href="#gallery">gallery</a></li>
                     <li><a href="#pricing">pricing</a></li>
+                    <li><a href="#contact">contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -168,6 +165,50 @@
             </div>
         </div>
     </section>
+
+      <section id='contact' class="white-bg section intro">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>Learn to Code</h2>
+                <p>If you want to create your own website, check out W3Schools Spaces.
+                    It is free to use, and does not require any setup Code snippets for HTML, CSS and JavaScript</p>
+            </div>
+            <div class="intro-img">
+                <img src="assets/img/html.svg" alt="HTML/CSS/JS">
+                <div class="contact-form">
+                    <fieldset class="form-grid">
+                        <legend>Contact me</legend>
+
+                        <div class="form-group">
+                        <label for="first-name">First name</label>
+                        <input type="text" name="first-name" id="first-name" placeholder="Type your first name">
+                        </div>
+
+                        <div class="form-group">
+                        <label for="last-name">Last name</label>
+                        <input type="text" name="last-name" id="last-name" placeholder="Type your last name">
+                        </div>
+
+                        <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" placeholder="Type your email">
+                        </div>
+
+                        <div class="form-group full-widht">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" placeholder="Type your message"></textarea>
+                        </div>
+
+                        <div class="form-group">
+                        <button type="submit"> Send message</button>
+                        </div>
+
+                    </fieldset>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
