--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
 </head>
 
 <body class="main-bg">
+
+    <input type="checkbox" id="close-menu" class="close-menu" role="button" aria-label="Close menu">
+    <label class="close-menu-label" for="close-menu" title="close-menu"></label>
     <aside class="menu white-bg">
         <div class="menu-content">
-            <h1>
+            <h1 onclick="getElementById('close-menu').checked = false">
                 <a href="#">LOGO</a>
             </h1>
             <nav>
-                <ul>
+                <ul onclick="getElementById('close-menu').checked = false">
                     <li><a href="#intro">intro</a></li>
                     <li><a href="#top3">top 3</a></li>
                     <li><a href="#grid-one">grid-one</a></li>
@@ -208,6 +211,8 @@
             </div>
         </div>
     </section>
+
+    <a class="back-to-top" href="#">TOP</a>
 
 </body>
 
