--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
     </section>
 
-    <section id="gallery" class="section white-bg intro grid-one">
+    <section id="gallery" class="section white-bg ">
         <div class="grid-two-content">
             <h2 class="grid-main-heading grid-gallery-heading">Gallery</h2>
             <p class="grid-description grid-gallery-description">Images</p>
